--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,14 @@
 name: Terraform workflow
 
-on: workflow_dispatch
+on: 
+  push:
+  workflow_dispatch:
 
 jobs:
   apply:
     name: Terraform apply
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
 
     steps:
       - name: Checkout repo
@@ -17,14 +20,40 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{secrets.AWSRalf}}
-          aws-secret-access-key: ${{secrets.awsRalf1}}
+          aws-access-key-id: ${{ secrets.AWSRalf }}
+          aws-secret-access-key: ${{ secrets.awsRalf1 }}
           aws-region: eu-central-1
 
       - name: Terraform Init
-        
         run: terraform init
 
       - name: Terraform Apply
-        
         run: terraform apply -auto-approve
+
+  destroy:
+    name: Terraform destroy
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWSRalf }}
+          aws-secret-access-key: ${{ secrets.awsRalf1 }}
+          aws-region: eu-central-1
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve  # Tippfehler korrigiert
+   
+        
+
