--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,7 +53,6 @@ jobs:
         run: terraform init
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve  # Tippfehler korrigiert
-   
-        
+        run: terraform destroy -auto-approve
 
+   
